# Camera_Slider

./: .cproject  .gitignore  .mxproject  .project  Slider_Controller Debug.launch  Slider_Controller.ioc
AndroidApp/: SliderControler.aia  SliderControler.apk
Core/Inc/: FIFO.h  Interrupt.h  Objects.h  main.h  motor.h  parametr.h  self_timer.h  setter.h  stm32f3xx_it.h  tim.h
Core/Src/: FIFO.c  Interrupt.c  Objects.c  gpio.c  main.c  motor.c  parametr.c  self_timer.c  setter.c  stm32f3xx_it.c  tim.c  usart.c
Debug/: Slider_Controller.elf  Slider_Controller.list  Slider_Controller.map  makefile  objects.list
Debug/Core/Src/: FIFO.d  FIFO.su  Interrupt.d  Interrupt.su  Objects.d  Objects.su  gpio.d  main.d  main.su  motor.d  motor.su  parametr.d  parametr.su  self_timer.d  self_timer.su  setter.d  setter.su  stm32f3xx_hal_msp.d  stm32f3xx_it.d  stm32f3xx_it.su  subdir.mk  system_stm32f3xx.d  tim.d  tim.su  usart.d  usart.su
Debug/Drivers/STM32F3xx_HAL_Driver/Src/: stm32f3xx_hal.d  stm32f3xx_hal_cortex.d  stm32f3xx_hal_dma.d  stm32f3xx_hal_exti.d  stm32f3xx_hal_flash.d  stm32f3xx_hal_flash_ex.d  (+12 more)
UT/: CMakeLists.txt
UT/Test/FIFO/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  FIFO_UT.cpp  Makefile  cmake_install.cmake
UT/Test/FIFO/Test/FIFO/: CTestTestfile.cmake  FIFO_UT  Makefile  cmake_install.cmake
UT/Test/FIFO/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
UT/Test/FIFO/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
UT/Test/FIFO/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
